feat(bff:user):add deleteAccount route,mock the service;docs(swagger):add user-deleteAccount
