# bff/docs/swagger.yaml
@@ -877,57 +877,6 @@ definitions:
     - kcmc
     - xf
     type: object
-  grade.GraduateGrade:
-    properties:
-      classCategory:
-        type: string
-      classCode:
-        type: string
-      classID:
-        type: string
-      classMark:
-        type: string
-      className:
-        type: string
-      classNature:
-        type: string
-      college:
-        type: string
-      credit:
-        type: number
-      grade:
-        type: integer
-      gradePoints:
-        type: number
-      isAvailable:
-        type: string
-      isDegree:
-        type: string
-      jxbId:
-        type: string
-      major:
-        type: string
-      name:
-        type: string
-      point:
-        type: number
-      setCollege:
-        type: string
-      status:
-        type: string
-      studentCategory:
-        type: string
-      studentID:
-        type: string
-      studentNum:
-        type: string
-      teacher:
-        type: string
-      term:
-        type: integer
-      year:
-        type: string
-    type: object
   grade.TypeOfGradeScore:
     properties:
       grade_score_list:
@@ -940,25 +889,6 @@ definitions:
     required:
     - grade_score_list
     - kcxzmc
-    type: object
-  grade.UpdateGraduateGradesReq:
-    properties:
-      cjzt:
-        description: 成绩状态(0-全部；不填也可)
-        type: integer
-      xnm:
-        description: 学年，可选
-        type: integer
-      xqm:
-        description: 学期(1/2/3)，可选
-        type: integer
-    type: object
-  grade.UpdateGraduateGradesResp:
-    properties:
-      grades:
-        items:
-          $ref: '#/definitions/grade.GraduateGrade'
-        type: array
     type: object
   infoSum.DelInfoSumRequest:
     properties:
@@ -1337,6 +1267,13 @@ definitions:
         type: string
       domain_name:
         type: string
+    type: object
+  user.DeleteAccountReq:
+    properties:
+      password:
+        type: string
+    required:
+    - password
     type: object
   user.LoginByCCNUReq:
     properties:
@@ -2887,37 +2824,6 @@ paths:
       summary: 查询学分
       tags:
       - grade
-  /grade/getGraduateGrade:
-    post:
-      consumes:
-      - application/json
-      description: 根据学年号和学期号获取用户的成绩
-      parameters:
-      - description: 获取学年和学期的成绩请求参数
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/grade.UpdateGraduateGradesReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功返回学年和学期的成绩信息
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/grade.UpdateGraduateGradesResp'
-              type: object
-        "500":
-          description: 系统异常，获取失败
-          schema:
-            $ref: '#/definitions/web.Response'
-      summary: 查询研究生成绩
-      tags:
-      - grade
   /library/cancel_reserve:
     post:
       consumes:
@@ -3019,7 +2925,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: 座位或评论关联 ID
+      - description: 座位 ID (devID)
         in: query
         name: id
         required: true
@@ -3449,6 +3355,30 @@ paths:
       summary: 获取图床访问令牌
       tags:
       - tube
+  /users/deactivate:
+    delete:
+      consumes:
+      - application/json
+      description: 用户输入密码验明身份后注销
+      parameters:
+      - description: 注销账户请求体
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.DeleteAccountReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/web.Response'
+      security:
+      - Bearer Auth: []
+      summary: 注销账户
+      tags:
+      - user
   /users/login_ccnu:
     post:
       consumes:
